<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTxtMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/marcaCarro"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <EditText
                android:id="@+id/editTxtModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/modeloCarro"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/editTxtMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matriculaCarro"
                android:inputType="textCapCharacters"
                app:met_mask="##-##-##"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mesCarro" />

                <Space
                    android:layout_width="93dp"
                    android:layout_height="35dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/anoCarro" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinMes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/mesSpinner" />

                <Space
                    android:layout_width="130dp"
                    android:layout_height="35dp" />

                <Spinner
                    android:id="@+id/spinAno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/anoSpinner" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/combustivelCarro" />

            <Spinner
                android:id="@+id/spinnerCombustivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/oprSpinner" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <Button
                android:id="@+id/buttonAddCarro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdicionarCarro" />

            <TextView
                android:id="@+id/text_dashboard"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>